# openspace-app

./: .flake8  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
pages/: cw.py  home.py  inertial.py
src/openspace-app/: app.py
src/openspace-app/pages/: od.py
src/openspace_app/: app.py  configs.py  widgets.py
src/openspace_app/assets/css/: custom-style.css
src/openspace_app/pages/: cw.py  hardware.py  home.py  inertial.py  od.py
workflows/: security.yml
